--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Unit 6SB Tic Tac Toe</title>
+    <script src="lib/jquery/dist/jquery.js"></script>
+    <title>Strava Data</title>
   </head>
   <body>
 
