--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <script src="lib/jquery/dist/jquery.js"></script>
-    <title>Strava Data</title>
+    <title>Find Accountability</title>
   </head>
   <body>
-
+    <div id="container"></div>
   </body>
     <script src='./build/bundle.js'></script>
 </html>
